--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,28 @@
+dist: xenial
+
+addons:
+  apt:
+    packages:
+      - docker-ce
+
+sudo: required
+language: python
+python: 3.7
+
 services:
   - docker
 
+install:
+  - pip install tox
+
 env:
-  - distribution: centos
-    version: 7
-    ansible_version: 2.6.3
-  - distribution: debian
-    version: stretch
-    ansible_version: 2.6.3
-  - distribution: ubuntu
-    version: xenial
-    ansible_version: 2.6.3
+  - TOX_ENV: py37-ansible25
+  - TOX_ENV: py37-ansible26
+  - TOX_ENV: py37-ansible27
+  - TOX_ENV: py37-ansible28
 
 script:
-  - ./tests/test.sh
+  - tox -e ${TOX_ENV}
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
