--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,5 @@
 galaxy_info:
+  role_name: "identity"
   author: "Krzysztof Magosa"
   description: "Configures groups and users"
   license: "MIT"
@@ -6,13 +7,17 @@ galaxy_info:
   platforms:
     - name: Debian
       versions:
+        - buster
         - stretch
     - name: Ubuntu
       versions:
-        - xenial
+        - bionic
     - name: EL
       versions:
         - 7
+    - name: Alpine
+      versions:
+        - any
   # galaxy_tags:
   #   - tag_name
   dependencies: []
